--- a/template.html.j2
+++ b/template.html.j2
@@ -1,6 +1,3 @@
-<header style="text-align: center;">
-    <span class="title">Todoist - {{ todoist_query }}</span>
-</header>
 <div class="layout">
     <div class="columns">
         <div class="list"
@@ -55,7 +52,7 @@
 <div class="title_bar">
     <img class="image" src="https://www.svgrepo.com/download/306859/todoist.svg">
     <span class="title">Todoist (Unofficial)</span>
-    <span class="instance">@KilobyteTheDust</span>
+    <span class="instance">{{ todoist_query }}</span>
 </div>
 
 <!-- Include the overflow.js script -->
