Remove 'unofficial' from title bar

--- a/template.html.j2
+++ b/template.html.j2
@@ -51,7 +51,7 @@
 </div>
 <div class="title_bar">
     <img class="image" src="https://www.svgrepo.com/download/306859/todoist.svg">
-    <span class="title">Todoist (Unofficial)</span>
+    <span class="title">Todoist</span>
     <span class="instance">{{ todoist_query }}</span>
 </div>
 
